[project]
name = "kb21pkuser34"
version = "0.1.1"
description = ""
authors = [
    {name = "jinsilhanna",email = "jinsilhanna@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
